codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_reasoning_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  为 gpt-5.1-codex-max 选择推理强度

  1. 低               Fast responses with lighter reasoning
  2. 中（默认）        Balances speed and reasoning depth for everyday tasks
› 3. 高（当前）        Greater reasoning depth for complex problems
  4. 超高             Extra high reasoning depth for complex problems

  按 enter 确认或按 esc 返回
