codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  选择模型与推理强度
  可通过 codex -m <model_name> 或 config.toml 访问旧版模型

› 1. gpt-5.3-codex (default)  Latest frontier agentic coding model.
  2. gpt-5.4                  Latest frontier agentic coding model.
  3. gpt-5.2-codex            Frontier agentic coding model.
  4. gpt-5.1-codex-max        Codex-optimized flagship for deep and fast
                              reasoning.
  5. gpt-5.2                  Latest frontier model with improvements across
                              knowledge, reasoning and coding
  6. gpt-5.1-codex-mini       Optimized for codex. Cheaper, faster, but less
                              capable.

  按回车选择推理强度，或按 Esc 取消。
