codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__multi_agent_enable_prompt.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 6001
expression: popup
---
  启用多 Agent？
  你的配置中当前已禁用多 Agent。

› 1. 是，启用      现在保存设置。你需要新会话才能使用。
  2. 暂不         继续保持多 Agent 关闭。

  按 Enter 确认或按 Esc 返回
