codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__personality_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  选择性格
  选择 Codex 的沟通风格。

  1. 友好                 温暖、协作且乐于助人。
› 2. 务实（当前）        简洁、任务导向、直接。

  按 enter 确认或按 esc 返回
