codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_implementation_popup_no_selected.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  实现这个计划？

  1. 是，执行该计划            切换到默认模式并开始编码。
› 2. 否，保持计划模式           继续与模型制定计划。

  按 Enter 确认或按 Esc 返回
