codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__realtime_audio_selection_popup_narrow.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  设置
  配置 Codex 设置。

› 1. 麦克风  当前：系统默认
  2. 扬声器  当前：系统默认

  按 enter 确认或按 esc 返回
