codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__realtime_microphone_picker_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  选择麦克风
  已保存的设备仅用于实时语音。

  1. 系统默认                              使用操作系统默认设备。
› 2. 不可用：Studio Mic（当前）（已禁用）  已配置的设备当前不可用。（已禁用
                                           ：请重新连接设备或选择其他设备。
                                           ）
  3. Built-in Mic
  4. USB Mic

  按 enter 确认或按 esc 返回
